--- a/frontend/public/rough3.html
+++ b/frontend/public/rough3.html
@@ -3,74 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Rough 3</title>
     <style>
-
         body {
-            padding: 0;
             margin: 0;
+            padding: 0;
+            background-color: aliceblue;
         }
-        #queries-body {
-            padding: 10px;
+
+        #login-admin-body {
             display: flex;
-            justify-content: center;
-        }
-
-        #queries * {
-            padding: 0;
-            margin: 5px;
-        }
-
-        #queries {
+            justify-content: space-between;
+            align-items: center;
             width: 90%;
-            padding: 15px 10px;
-            margin: 0;
-            font-size: 20px;
+            height: 100vh;
+            padding: 0 5%;
+        }
+
+        #login-form {
+            width: 30%;
+            height: 80%;
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
+            justify-content: space-between;
+        }
+
+        #login-form #logo {
+            font-size: 50px;
+            font-weight: 600;
+            position: relative;
+            font-family: "Great Vibes", cursive;
+        }
+
+        #login-form form {
+            width: 100%;
+            height: 75%;
+            background-color: rgb(218, 42, 78);
+            background-color: rgba(178, 115, 115, 0.665);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-radius: 15px;
+            box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+        }
+
+        #login-form * {
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            height: 45px;
+            border-radius: 10px;
+        }
+
+        #login-form button,
+        #login-form input {
+            font-size: larger;
             background-color: aliceblue;
+            border: none;
+            text-align: center;
+        }
+
+        #login-form button {
+            background-color: white;
+            border: 1px solid rgba(240, 248, 255, 0.623);
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 2px, rgba(0, 0, 0, 0.23) 0px 3px 2px;
+
+            border-radius: 17px;
+        }
+
+        #login-form div {
+            width: 85%;
+            margin: 6% 0;
+        }
+
+        #login-design {
+            width: 50%;
+            height: 80%;
+            display: flex;
+            justify-content: center;
+            background-color: gray;
+            background-color: darkslategrey;
             border-radius: 25px;
-            border: 1px solid rgba(128, 128, 128, 0.499);
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
         }
 
-        #queries div img {
-            width: 25px;
+        #img-container {
+            width: 60%;
+            height: 100%;
+            display: flex;
+            justify-content: end;
+            align-items: end;
         }
 
-        #queries div {
+        #img-container img {
+            width: 175%;
+            position: relative;
+            margin-bottom: 8%;
+            border-radius: 25px;
+        }
+
+        #text-container {
+            width: 30%;
+            height: 100%;
             display: flex;
             align-items: center;
-        }
-
-        #queries-top {
-            display: flex;
-            align-items: center;
-        }
-
-        #queries-name {
-            font-size: 30px;
-            width: fit-content;
-        }
-
-        #queries-phone {
-            width: fit-content;
+            font-size: 45px;
+            color: white;
+            font-family: "Sofia", cursive;
         }
     </style>
 </head>
 <body>
-    <div id="queries-body">
-        <div id="queries">
-            <p id="queries-name">Abdullah Zahid</p>
-            <div>
-                <img src="./Images/phone.png" alt="">
-                <p id="queries-phone">+923227888444</p>
+    <div id="login-admin-body">
+        <div id="login-form">
+            <p id="logo">Best Homes Real Estate!</p>
+            <form>
+                <div>
+                    <label for="username">Username</label>
+                    <input type="text" name="username" id="username" required placeholder="Admin Username">
+                </div>
+                <div>
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" required>
+                </div>
+                <div><button>Login</button></div>
+            </form>
+        </div>
+        <div id="login-design">
+            <div id="img-container">
+                <img src="./Images/Home Illustration 2.png" alt="home illustration">
             </div>
-            <div>
-                <img src="./Images/email.png" alt="email">
-                <p id="queries-email">abdullahzahid1796@gmail.com</p>
+            <div id="text-container">
+                <p>Let's Rectify and introduce new living styles</p>
             </div>
-            <p id="queries-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, enim fugit perferendis debitis illum error doloribus mollitia quibusdam. Excepturi eveniet earum optio officia asperiores suscipit eos qui minima eius ab?</p>
         </div>
     </div>
 </body>
